# spoilerowobot

./: Cargo.toml  LICENSE  README.md  spoilerobot.py
.github/workflows/: rust.yml
src/: main.rs  strings.rs  util.rs
src/bot/: callback.rs  command.rs  inline.rs  mod.rs  spoiler_creation.rs
src/bot/command/: cancel.rs  help.rs  mod.rs  spoiler.rs  start.rs
src/state/: mod.rs  periodic.rs  spoiler.rs
src/strings/: bot_replies.rs  mod.rs
