[package]
name = "spoilerowobot"
description = "A Telegram spoiler creation bot"
repository = "https://github.com/Proggy-and-Techy-for-girls/spoilerowobot"
readme = "README.md"
version = "1.0.0"
authors = ["Lara"]
license = "MIT"
edition = "2018"
keywords = [
    "telegram-bot",
    "tbot",
]

[[bin]]
name = "spoilerowobot"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
futures-util = "0.3.6"
lazy_static = "1.4.0"
rand = "0.8.3"
regex = "1"
tbot = "0.6.7"
tokio = { version = "0.2", features = ["macros"] }